# dwd-downloader

./: .env  CHANGELOG.md  README.md  config.yaml  pyproject.toml
dwd_downloader/: api.py  cli.py  datasets.py  file_utils.py  logger.py  mirror.py  storage.py  utils.py
